// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should rnder Expenses summary witht 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should rnder Expenses summary witht multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $2,221,233.35
  </h1>
</div>
`;
